# ganglia-mod_netif

./: README.md  configure.ac
gmond/: Makefile.am
gmond/modules/: Makefile.am
gmond/modules/conf.d/: netif.conf
gmond/modules/netif/: Makefile.am  mod_netif-linux.c
